--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div id="baseVContainer" class="container L2R">
         <div></div>
         <div id="ClickerScrn">
+          <div id="Banner">
+            123.456 million diamonds
+          </div>
         </div>
         <div id="Contents" class="container L2R">
           <div id="CenterArea" class="container U2D">
@@ -24,7 +27,10 @@
             </div>
             <div id="Panel"></div>
           </div>
-          <div id="Products"></div>
+          <div id="Products" class="container U2D scrollable" style="overflow-x:visible;">
+            <div class="prod-item" id="">
+            </div>
+          </div>
         </div>
       </div>
       <div>
