add classes.js / main bigint i/o

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <script>var VERSION = '0.0.1';</script>
         <link href="style.css" rel="stylesheet">
+        <script src="classes.js" async defer></script>
         <script src="index.js" async defer></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
