--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div></div>
                 <div id="ClickerScrn">
                     <div id="Banner"> 123.456 million diamonds </div>
-                    <button id="DiamondButton"></button>
+                    <button id="ClickableDiamond"></button>
                     <div id="Notice"></div>
                 </div>
                 <div id="Contents" class="container L2R">
