セットアップ

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div id="baseVContainer" class="container L2R">
                 <div></div>
                 <div id="ClickerScrn">
+                    <canvas id="MainCanvas"></canvas>
                     <div id="Banner"> 123.456 million diamonds </div>
                     <button id="ClickableDiamond"></button>
                     <div id="Notice"></div>
