--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
                 <div></div>
                 <div id="ClickerScrn">
                     <canvas id="MainCanvas"></canvas>
-                    <div id="Banner"> 123.456 million diamonds </div>
+                    <div id="Banner">
+                        <div id="BannerText">
+                            123.456 million diamonds 
+                            <br>812,000 DpS
+                        </div>
+                    </div>
                     <button id="ClickableDiamond"></button>
                     <div id="Notice"></div>
                 </div>
@@ -31,7 +36,8 @@
                         </div>
                     </div>
                     <div id="Products" class="container U2D scrollable" style="overflow-x:visible;">
-                        <div class="prod-item" id="">
+                        <div class="prod-item" id="prod-test1">
+                            test1
                         </div>
                     </div>
                 </div>
