--- a/index.html
+++ b/index.html
@@ -13,32 +13,28 @@
     </head>
     <body>
         <div id="game">
-            <div id="baseVContainer" class="container L2R">
+            <div id="baseVContainer" class="">
                 <div></div>
                 <div id="ClickerScrn">
                     <canvas id="MainCanvas"></canvas>
                     <div id="Banner">
-                        <div id="BannerText">
-                            123.456 million diamonds 
-                            <br>812,000 DpS
-                        </div>
+                        <div id="BannerText"> 123.456 million diamonds <br>812,000 DpS </div>
                     </div>
                     <button id="ClickableDiamond"></button>
                     <div id="Notice"></div>
                 </div>
-                <div id="Contents" class="container L2R">
-                    <div id="CenterArea" class="container U2D">
-                        <div id="Menu" class="switchingArea">
-                            <div id="Inventory"></div>
-                            <div id="ProductsMenu"></div>
-                        </div>
-                        <div id="Panel">
-                        </div>
+                <div id="Menu" class="switchingArea">
+                    <div id="Inventory"></div>
+                    <div id="ProductsMenu"></div>
+                </div>
+                <div id="Panel">
+                </div>
+                <div id="Products" class="unhidden-x">
+                    <div class="prod-item" id="prod-test1">
+                        <div class="prod-cover"> test1 </div>
                     </div>
-                    <div id="Products" class="container U2D scrollable" style="overflow-x:visible;">
-                        <div class="prod-item" id="prod-test1">
-                            test1
-                        </div>
+                    <div class="prod-item" id="prod-test2">
+                        <div class="prod-cover"> test2 </div>
                     </div>
                 </div>
             </div>
