--- a/index.html
+++ b/index.html
@@ -20,7 +20,19 @@
                     <div id="Banner">
                         <div id="BannerText"> 123.456 million diamonds <br>812,000 DpS </div>
                     </div>
-                    <button id="ClickableDiamond"></button>
+                    <button id="ClickableDiamond">
+                        <div id="ClickSounds">
+                            <audio preload="auto">
+                                <source src="/assets/sounds/dig0.mp3" type="audio/mp3">
+                            </audio>
+                            <audio preload="auto">
+                                <source src="/assets/sounds/dig1.mp3" type="audio/mp3">
+                            </audio>
+                            <audio preload="auto">
+                                <source src="/assets/sounds/dig2.mp3" type="audio/mp3">
+                            </audio>
+                        </div>
+                    </button>
                     <div id="Notice"></div>
                 </div>
                 <div id="Menu" class="switchingArea">
