products test / loop fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                 </div>
                 <div id="Products" class="unhidden-x">
                     <div class="prod-item" id="prod-test1">
-                        <div class="prod-cover"> test1 </div>
+                        <div class="prod-cover">
+                            <div class="prod-title" style="font-size: 1.5rem; left: 5%;"> 農場 | per second: 2,345 </div>
+                            <div class="prod-upgrade" style="right: 3%;"> アップグレード </div>
+                        </div>
                     </div>
                     <div class="prod-item" id="prod-test2">
                         <div class="prod-cover"> test2 </div>
