--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
                         <div id="BannerText"> 123.456 million diamonds <br>812,000 DpS </div>
                     </div>
                     <button id="ClickableDiamond">
-                        <div id="ClickSounds">
-                            <audio preload="auto">
-                                <source src="/assets/sounds/dig0.mp3" type="audio/mp3">
-                            </audio>
-                            <audio preload="auto">
-                                <source src="/assets/sounds/dig1.mp3" type="audio/mp3">
-                            </audio>
-                            <audio preload="auto">
-                                <source src="/assets/sounds/dig2.mp3" type="audio/mp3">
-                            </audio>
-                        </div>
                     </button>
                     <div id="Notice"></div>
                 </div>
@@ -44,8 +33,8 @@
                 <div id="Products" class="unhidden-x">
                     <div class="prod-item" id="prod-test1">
                         <div class="prod-cover">
-                            <div class="prod-title" style="font-size: 1.5rem; left: 5%;"> 農場 | per second: 2,345 </div>
-                            <div class="prod-upgrade" style="right: 3%;"> アップグレード </div>
+                            <div class="prod-title"> Miner | per second: 2,345 </div>
+                            <div class="prod-upgrade"> アップグレード </div>
                         </div>
                     </div>
                     <div class="prod-item" id="prod-test2">
